# ibrahimeda

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: index.md
src/ibrahimeda/: __init__.py  cli.py  eda.py  features.py  io.py  metrics.py  modeling.py  prep.py  text.py  timeseries.py  viz.py
tests/: test_basic.py
