[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibrahimeda"
version = "1.0.0"
description = "Practical data science helpers for EDA, prep, IO, text, time series, viz, and quick checks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Ibrahim"}]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.22"
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3"]
plot = ["matplotlib>=3.7", "plotly>=5.20"]
io = ["pyarrow>=14.0"]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.3"]

[project.urls]
homepage = "https://github.com/muhammadibrahim313/ibrahimeda"
repository = "https://github.com/muhammadibrahim313/ibrahimeda"

[project.scripts]
ibrahimeda = "ibrahimeda.cli:main"
